# PSPL_CMS_FlightSoftware

./: .clang-format  .gitignore  .gitmodules  CMSAvionics.code-workspace  CMakeLists.txt  Doxyfile  Makefile  README.md  bootsel.sh  build-host.sh  build.sh  data.txt  flash.sh  pico.py  pico.sh  pico_sdk_import.cmake  reset.sh  temp.txt
.github/workflows/: cmake.yml  docs.yml  make.yml
ADC/lib/adc/: adc.c  adc.h
ADC/src/: main.c
Bang Bang Boom Box/Power_System_Controller_firmware/: Power_System_Controller_firmware.ino
Bang Bang Boom Box/Power_System_Controller_firmware/src/: main.cpp
Bang Bang Boom Box/Refrences/sketch_oct05a/: sketch_oct05a.ino
CMS/Code/: README.md
CMS/Code/BangBang/: platformio.ini
CMS/Code/BangBang/Test vi/: Bang Bang control Vi.lvlps  Bang Bang control Vi.lvproj  Bang_Bang_LOX.vi  Bang_Bang_LOX_1.vi  CMS Contol Console.vi
CMS/Code/Ethernet Test/include/: common.h
CMS/Code/Ethernet Test/src/: transmitter copy.cpp  transmitter.cpp
CMS/Code/FlashSizing/: main.c  run.sh
CMS/Code/Live Telemetry/: readme.txt
CMS/Code/Live Telemetry/OLD/transmitter_test/: transmitter_test.ino
CMS/Code/Live Telemetry/Testing/TEST_DATA_CODE/: super_test.ino
CMS/Code/Thermal Testing/Teensy_onboard_Temp_Loging/: Teensy_onboard_Temp_Loging.ino
CMS/Code/VDAQ/: platformio.ini
ECU/lib/ecu/: ecu.c  ecu.h
ECU/src/: main.c
Flash/: platformio.ini
Flash/lib/flash/: flash.c  flash.h
Flash/src/: main.c
Libraries/ExampleLibrary/: example.c
Libraries/adc/: adc.c
Libraries/common/: constants.h
Libraries/ethernut/: ethernut.h
Libraries/example/: example.h
Libraries/flash/: flash.h
Libraries/spi/: spi.c  spi.h
Libraries/timer/: timer.c  timer.h
Libraries/uart/: uart.c  uart.h
Lower FC/src/: main.c
Lower VDAQ/: platformio.ini
Lower VDAQ/src/: main.c
SPI/: platformio.ini
SPI/lib/bme280/: bme280.c  bme280.h
SPI/lib/common/: common.c  common.h
SPI/lib/constants/: constants.h
SPI/lib/spi/: spi.c  spi.h
SPI/lib/timer/: timer.c  timer.h
SPI/lib/uart/: uart.c  uart.h
SPI/src/: main.c
State Machine/lib/: state_machine.h
State Machine/src/: state_machine.c
Tests/SPI/src/: main.c
Tests/UART/src/: main.c
blink/: CMakeLists.txt  blink.c
cmake/: pico_sdk_import.cmake  util.cmake
device/ads13x/: ads13x.c
device/ads13x/include/: ads13x.h
device/max31856/: max31856.c
device/max31856/include/: max31856.h
device/mydma/: mydma.c
device/mydma/include/: mydma.h
device/myspi/: myspi.c
device/myspi/include/: myspi.h
device/myuart/: myuart.c
device/myuart/include/: myuart.h
device/spi/: spi.c
device/spi/include/: spi.h  spi_device_impl.h
device/spi2/: spi2.c
device/spi2/include/: spi2.h
device/w25n01/: w25n01.c
device/w25n01/include/: w25n01.h
device/w5500/: tcp_server.c  w5500.c  w5500.c.save  w5500_main.c
device/w5500/include/: w5500.h
device/w5500/include/w5500/: tcp_server.h
emu/: CMakeLists.txt
emu/src/: main.c
ethernut/: platformio.ini
ethernut/lib/ethernut/: ethernut.c  ethernut.h
ethernut/src/: main.c
flash/: flash.c
lib/ads130b04/: ads130b04.c  ads130b04.h
lib/ads13x/: ads13x.c  ads13x.h
lib/ads13x/include/: ads13x.h
lib/cmdnet-v2/: cmdnet.c
lib/cmdnet-v2/include/: cmdnet-v2.h  cmdnet.h
lib/commandnet/: commandnet.c  mpack_socket.c
lib/commandnet/include/: commandnet.h
lib/commandnet/include/commandnet/: mpack_socket.h
lib/crypto/include/: mbedtls_config.h
lib/dma/: dma.c
lib/dma/include/: dma.h
lib/example/: example.c  example.h
lib/freertos_config/include/: FreeRTOSConfig.h  goofyah.c
lib/max31856/: max31856.c  max31856.h
lib/max31856/include/: max31856.h
lib/mpack-socket/: mpack_socket.c
lib/ntp/: ntp.c  ntp_test.c
lib/ntp/include/: ntp.h
lib/psp/: logo.txt  psp.h
lib/psp/include/: psp.h
lib/sensornet/include/: sensornet.h
lib/spi/: spi.c  spi_device.h  spi_device_impl.h  spi_helpers.h
lib/spi/include/: spi.h  spi_device.h
lib/spi_device/: spi_device.h  spi_device_impl.h
lib/state-machine/: state-machine.c
lib/state-machine/include/: state-machine.h
lib/uart/: uart.c
lib/uart/include/: uart.h
lib/util/include/: psp.h
lib/w25n01/: w25n01.c  w25n01.h
lib/w25n01/include/: w25n01.h
lib/w5500/: tcp_server.c  w5500.c  w5500.h
lib/w5500/include/: w5500.h
lib/w5500/include/w5500/: tcp_server.h
lib/w5500/tcp_server/: tcp_server.c
lib/ws5500/: w5500.c  w5500.h  ws5500.h
misc/seebeck_table_parsing/: main.py  seebeck_table.csv  shitfuck.txt
misc/w5500-testing/: main.c  spi_device.h  spi_device_impl.h  w5500.c  w5500.h
misc/w5500-testing/hardware/: spi.c  spi.h
misc/w5500-testing/pico/: picostdlib.c  picostdlib.h  stdlib.c  stdlib.h
pico/: bootsel.sh  copyprog.sh  reset.sh
scripts/: .gitignore  flash.sh  lockfile.py  monitor.py  ntp.py  pico.py  router.sh
seebeck_table_parsing/: main.py  negative_parts.txt  positive_parts.txt  seebeck_table.csv
src/adc-test/: main.c
src/adc-test-board/: main.c
src/ads131m02-raw/: main.c
src/cringe/: main.c
src/dev-1-ethernet-test/: main.c
src/dma-test/: main.c
src/echo/: main.c
src/emu/: cmdnet_task.c  cmdnet_vars.c  emu.h  main.c  sensornet_task.c  solenoid_task.c
src/emu-rtos/: adc-reader.c  bang-bang-loop.c  bang-bang-pos-writer.c  cmdnet-task.c  cmdnet_task.c  cmdnet_vars.c  config.c  config.h  data-writer.c  emu.h  main.c  ntp-test.c  pyro-cont-reader.c  runtime-globals.c  sensornet_task.c  sm-task.c  state-machine.c  state-machine.h  tc-reader.c  w5500_drdy.c
src/emu/src/: main.c
src/eth-1/: main.c
src/eth-2/: main.c
src/flash-speed-test/: main.c
src/flash-test/: main.c
src/flashboy/: main.c
src/lotsofpackets/: main.c
src/mfc-main/: adc-reader.c  config.h  data-writer.c  main.c  mfc.h  w5500_drdy.c
src/mfc-validation/: main.c  mfc.h
src/ntp-test/: main.c
src/pyro-test/: main.c
src/queue-test/: main.c
src/rtos-test/: main.c
src/sanity-check/: main.c
src/spi-dma-test/: main.c  spi_dma.c
src/spi-loopback-test/: main.c
src/tc-test-board/: main.c
src/w5500-test/: main.c
tc-test-board/: main.c
(+8 files in other folders)
